knative-build/runtimes/javascript/tests/error/payload-ow-bad-init-code-empty.http
POST http://localhost:8080/init HTTP/1.1
content-type: application/json

{
  "value": {
    "name" : "bad-init-code-empty",
    "main" : "main",
    "binary": false,
    "code" : ""
  }
}

###
